--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,3 +1,29 @@
-<h1 class="p-3 text-center">
-    Seja bem vindo!
+
+<h1 style="color: #CF1A1A;" class="p-3 text-center">
+    NadTube
 </h1>
+
+<form class="d-flex" role="search">
+  <input class="form-control me-2" type="search" placeholder="Pesquisar" aria-label="Search">
+  <button class="btn btn-outline-success" type="submit">Pesquisar</button>
+</form>
+
+<div class="video-list-container">
+    <h2>Lista de vídeos</h2>
+  
+    <div *ngIf="videos.length === 0" class="loading-message">
+      <p>Carregando vídeos...</p>
+    </div>
+  
+    <div *ngIf="videos.length > 0" class="video-grid">
+      <div *ngFor="let video of videos" class="video-card">
+        <img [src]="video.thumbnail" alt="Thumbnail do vídeo" class="thumbnail" />
+        <div class="video-info">
+          <h3 class="video-title">{{ video.title }}</h3>
+          <p class="video-description">{{ video.description }}</p>
+          <button class="watch-button" (click)="watchVideo(video)">Assistir</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  
