--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -10,10 +10,7 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Features</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Pricing</a>
+            <a class="nav-link logout" (click)="logout()" href="javascript:void(0)">Logout</a>
           </li>
         </ul>
       </div>
@@ -26,7 +23,7 @@
     </div>
 </div>
 
-  <div class=" row fixed-bottom">
+  <div class=" row ">
     <div class="container text-center text-light bg-dark p-1">
         © 2022 Copyright nadtube.com by Nadson Sousa
     </div>
