--- a/src/app/pages/video/video-detail.component.html
+++ b/src/app/pages/video/video-detail.component.html
@@ -1,11 +1,18 @@
 
-
 <div *ngIf="videoId as currentVideoId; else loading" class="video-detail">
     <h2>Assistindo ao vídeo...</h2>
+    
+    <h3 class="video-title">{{ currentVideo?.title }}</h3>
+    <p class="video-description">{{ currentVideo?.description }}</p>
+    
+    <!-- Exibe o número de visualizações -->
+    <p><strong>Visualizações:</strong> {{ currentVideo?.views }}</p>
+    
     <div id="video-player"></div> <!-- O player será inserido aqui -->
   </div>
-
+  
   <ng-template #loading>
     <p style="color: white;">Carregando vídeo...</p>
   </ng-template>
+  
   
