--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">NadTube</a>
+      <a style="font-weight: bold;" class="navbar-brand" href="#">NadTube</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -10,7 +10,7 @@
             <a class="nav-link active" aria-current="page" href="#">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link logout" (click)="logout()" href="javascript:void(0)">Logout</a>
+            <a class="nav-link logout" (click)="logout()" href="javascript:void(0)">Encerrar sessão</a>
           </li>
         </ul>
       </div>
@@ -24,7 +24,7 @@
 </div>
 
   <div class=" row ">
-    <div class="container text-center text-light bg-dark p-1">
+    <div  class="container text-center text-light p-1">
         © 2024 Copyright nadtube.com by Nadson Sousa
     </div>
 </div>
