ajustes de rota

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -49,6 +49,7 @@
         <div class="video-info">
           <h3 class="video-title">{{ video.title }}</h3>
           <p class="video-description">{{ video.description }}</p>
+          <p>views: {{video.views}}</p>
           <button class="watch-button" (click)="watchVideo(video)">ASSISTIR</button>
         </div>
       </div>
