Ajustes da logo e tela de exibição de vídeo

--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -7,7 +7,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page">Home</a>
+            <a href="#" onclick="window.history.back(); return false;" class="nav-link active" aria-current="page">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link logout" (click)="logout()" href="javascript:void(0)">Encerrar sessão</a>
