--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -48,7 +48,7 @@
   .video-description {
     font-size: 0.9rem;
     color: #555;
-    margin-bottom: 15px;
+    margin-bottom: 5px;
   }
   
   .watch-button {
@@ -60,6 +60,7 @@
     border-radius: 4px;
     cursor: pointer;
     font-size: 0.9rem;
+    margin-top: 10px;
   }
   
   .watch-button:hover {
@@ -90,4 +91,40 @@
   font-size: 20px;
   margin-bottom: 0;
   margin-top: 10px;
+}
+
+.data{
+  font-size: 10px;
+  margin-top: 10px;
+}
+
+.views{
+  font-size: 13px;
+  margin: 11px;
+}
+
+.box-views{
+  justify-content: left;
+  display:  flex;
+  align-items: center;
+  margin-top: 0;
+}
+svg{
+  width: 5%;
+  fill: #6b6b6b;
+  margin: 0;
+}
+
+.video-data{
+  font-size: 10px;
+}
+
+.logo-title{
+  display: flex;
+  justify-content: center;
+  margin: 20px;
+}
+
+.logo-title svg{
+  width: 3%;
 }
