--- a/src/app/pages/video/video-detail.component.css
+++ b/src/app/pages/video/video-detail.component.css
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh; /* Preenche toda a altura da tela */
-    background-color: #f9f9f9; /* Fundo claro para destacar o vídeo */
+    background-color: #CF1A1A; /* Fundo claro para destacar o vídeo */
     padding: 1rem;
     box-sizing: border-box;
   }
@@ -13,7 +13,14 @@
     margin-bottom: 30px;
     font-size: 1.5rem;
     text-align: center;
-    color: #CF1A1A;
+    color: #ffffff;
+  }
+
+  h1{
+    margin-bottom: 30px;
+    font-size: 1.5rem;
+    text-align: center;
+    color: #ffffff;
   }
   
   #video-player {
@@ -28,5 +35,38 @@
       max-width: 100%; /* Preenche a largura da tela em dispositivos menores */
       height: auto; /* Ajusta a altura automaticamente */
     }
+  }
+
+  
+.logout{
+    color: #CF1A1A;
+}
+
+.logout:hover{
+    color: rgb(87, 9, 9);
+}
+
+.navbar{
+    background-color: white;
+}
+
+.container-fluid{
+    background-color: white;
+}
+
+p{
+    color: white;
+    margin-top: 50%;
+}
+
+.logo-title{
+    display: flex;
+    justify-content: center;
+    margin: 20px;
+  }
+  
+  .logo-title svg{
+    width: 3%;
+    fill: white;
   }
   
