--- a/src/app/pages/video/video-detail.component.html
+++ b/src/app/pages/video/video-detail.component.html
@@ -1,15 +1,37 @@
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand">NadTube</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a href="#" onclick="window.history.back(); return false;" class="nav-link active" aria-current="page">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link logout" (click)="logout()" href="javascript:void(0)">Encerrar sessão</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+<div class="logo-title">
+  <h1 style="color: #ffffff;" class="p-3 text-center">NadTube</h1>
+  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--!Font Awesome Free 6.7.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path fill="#d12323" d="M73 39c-14.8-9.1-33.4-9.4-48.5-.9S0 62.6 0 80L0 432c0 17.4 9.4 33.4 24.5 41.9s33.7 8.1 48.5-.9L361 297c14.3-8.7 23-24.2 23-41s-8.7-32.2-23-41L73 39z"/></svg>
+</div>
 
 <div *ngIf="videoId as currentVideoId; else loading" class="video-detail">
-    <h2>Assistindo ao vídeo...</h2>
     
     <h3 class="video-title">{{ currentVideo?.title }}</h3>
     <p class="video-description">{{ currentVideo?.description }}</p>
     
-    <!-- Exibe o número de visualizações -->
-    <p><strong>Visualizações:</strong> {{ currentVideo?.views }}</p>
-    
     <div id="video-player"></div> <!-- O player será inserido aqui -->
+    <p>Assistindo ao vídeo...</p>
   </div>
+
+  
   
   <ng-template #loading>
     <p style="color: white;">Carregando vídeo...</p>
