--- a/src/app/security/login/login.component.html
+++ b/src/app/security/login/login.component.html
@@ -1,6 +1,9 @@
 <div class="container-global">
     <div>
-        <H1>NadTube</H1>
+        <div class="logo-title">
+            <h1 style="color: #ffffff;" class="p-3 text-center">NadTube</h1>
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--!Font Awesome Free 6.7.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.--><path d="M73 39c-14.8-9.1-33.4-9.4-48.5-.9S0 62.6 0 80L0 432c0 17.4 9.4 33.4 24.5 41.9s33.7 8.1 48.5-.9L361 297c14.3-8.7 23-24.2 23-41s-8.7-32.2-23-41L73 39z"/></svg>
+          </div>
         <p>Sua nova plataforma de vídeos!</p>
     </div>
     <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
@@ -16,7 +19,6 @@
         
     <button type="submit" class="btn btn-primary" [disabled]="loginForm.invalid">Entrar</button>
     
-    
-    <p *ngIf="errorMessage" class="error">{{errorMessage}}</p>
+
     </form>
 </div>
