--- a/src/app/pages/video/video-detail.component.html
+++ b/src/app/pages/video/video-detail.component.html
@@ -17,10 +17,22 @@
   </div>
 </nav>
 
+<div *ngIf="video; else loading" class="video-detail">
+  <h1>{{ video.title }}</h1>
+  <p>{{ video.description }}</p>
+  <p class="views">{{video.views}} visualizações</p>
+</div>
+
 <div *ngIf="videoId as currentVideoId; else loading" class="video-detail">
     <div id="video-player"></div> <!-- O player será inserido aqui -->
   </div>
 
+  <div class=" row ">
+    <div  class="container text-center text-light p-1">
+        © 2024 Copyright nadtube.com by Nadson Sousa
+    </div>
+</div>
+ 
   <ng-template #loading>
     <p style="color: white;">Carregando vídeo...</p>
   </ng-template>
