--- a/src/app/pages/video/video-detail.component.css
+++ b/src/app/pages/video/video-detail.component.css
@@ -5,13 +5,16 @@
   justify-content: center;
   align-items: center;
   height: 50vh; /* Preenche toda a altura da tela */
-  background-color: #CF1A1A;
-  padding: 15px; /* Adiciona um pouco de espaçamento interno */
+  background-color: #ffffff;
+  padding: 5px; /* Adiciona um pouco de espaçamento interno */
   box-sizing: border-box;
+  margin: 0;
+ 
 }
 
 .video-detail h1{
-  color: white;
+  color: rgb(213, 34, 34);
+  
 }
 
 h2 {
@@ -23,17 +26,22 @@ h2 {
 
 p {
   margin: 5px 0;
-  color: white;
+  color: rgb(0, 0, 0);
 }
 
 #video-player {
-  width: 100%;
-  max-width: 1000px; /* Limite máximo para o vídeo */
-  aspect-ratio: 16 / 9; /* Proporção padrão para vídeos */
-  background-color: black; /* Cor de fundo para áreas não preenchidas */
-  margin-top: 0px; /* Espaço entre o player e as informações */
-  margin-bottom: 20px;
-  padding: auto;
+  width: 100%; /* O vídeo ocupa toda a largura */
+  height: 90vh; /* O vídeo ocupa quase toda a altura da tela */
+  aspect-ratio: unset; /* Remove a proporção fixa */
+  background-color: black;
+  margin: 0; /* Remove os espaçamentos */
+}
+
+
+.box-video-player{
+  text-align: center;
+   background-color: #ffffff;
+   margin-top: 0;
 }
 
 @media (max-width: 768px) {
@@ -60,6 +68,7 @@ p {
 
 .container-fluid {
   background-color: white;
+
 }
 
 .views{
@@ -81,6 +90,5 @@ svg{
 
 
 .row {
-  background-color: #CF1A1A;
   margin-top: 50px;
 }
